--- a/outh-jwt/build.gradle
+++ b/outh-jwt/build.gradle
@@ -28,6 +28,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
+	// 프로퍼티 암호 관련 의존성
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
+
 	// jwt 관련 의존성
 	implementation 'com.auth0:java-jwt:4.2.1'
 
