--- a/Backend/crit/build.gradle
+++ b/Backend/crit/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-configuration-processor'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
+	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.28.0' // openvidu를 위한 의존성
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
