--- a/[FE]프론트/my-app/package.json
+++ b/[FE]프론트/my-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^6.0.4",
+    "sweetalert2": "^11.7.20",
     "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
@@ -36,6 +38,9 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "env": {
+    "browser": true
   },
   "browserslist": {
     "production": [
