--- a/Backend/crit/build.gradle
+++ b/Backend/crit/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.28.0' // openvidu를 위한 의존성
+	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.2' // 시간을 파싱하기 위한 방법
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
