--- a/Backend/crit/build.gradle
+++ b/Backend/crit/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-configuration-processor'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
+	implementation group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.18.0' // 이미지 정보 추출을 위한 의존성
 	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.28.0' // openvidu를 위한 의존성
 	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.2' // 시간을 파싱하기 위한 방법
 
