Feat : 사진인증 기능 추가

--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        show_sql: false
+        show_sql: true
         format_sql: true
 
 
