--- a/[FE]프론트/my-app/Dockerfile
+++ b/[FE]프론트/my-app/Dockerfile
@@ -17,7 +17,7 @@ FROM nginx:stable-alpine
 # 기본 Nginx 설정 파일 삭제
 RUN rm -rf /etc/nginx/conf.d/default.conf
 
-# 호스트 시스템의 Nginx 설정 파일을 Docker 빌드 컨텍스트로 복사
+# GitLab 디렉토리에 있는 Nginx 설정 파일 복사
 COPY ./default.conf /etc/nginx/conf.d/default.conf
 
 # 리액트 애플리케이션 빌드 결과물 복사
