--- a/[FE]프론트/my-app/default.conf
+++ b/[FE]프론트/my-app/default.conf
@@ -1,10 +1,41 @@
-server{
-        listen 3000;
+server {
+    listen 443 ssl default_server;
+    listen [::]:443 ssl default_server;
 
-        location / {
+    ssl_certificate /etc/letsencrypt/live/i9d201.p.ssafy.io/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/i9d201.p.ssafy.io/privkey.pem;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers HIGH:!aNULL:!MD5;
 
-                root /usr/share/nginx/html;
-                index index.html index.htm;
-                try_files $url $url/ /index.html;
-        }
+    root /home/ubuntu/build;
+    index index.html index.htm index.nginx-debian.html;
+
+    server_name _;
+
+    location / {
+        proxy_pass http://localhost:3000/;
+    }
+
+    location /api/ {
+        proxy_pass http://localhost:8080/;
+    }
+
+    location /openvidu/ {
+        proxy_pass http://localhost:5000/;
+    }
+
+    location /mytest/ {
+        proxy_pass http://localhost:8000/;
+    }
+}
+
+server {
+    listen 80;
+    listen [::]:80;
+
+    server_name i9d201.p.ssafy.io;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
