--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -25,12 +25,12 @@ spring:
     include: db
 
   jpa:
-#    hibernate:
-#      ddl-auto: create #create update none
+    hibernate:
+      ddl-auto: create #create update none
     show-sql: true
     properties:
       hibernate:
-        show_sql: true
+#        show_sql: true
         format_sql: true
 
 
