--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -25,8 +25,8 @@ spring:
     include: db
 
   jpa:
-#    hibernate:
-#      ddl-auto: create #create update none
+    hibernate:
+      ddl-auto: create #create update none
     show-sql: true
     properties:
       hibernate:
