--- a/Backend/crit/src/main/resources/application.properties
+++ b/Backend/crit/src/main/resources/application.properties
@@ -3,3 +3,5 @@
 #spring.datasource.url=jdbc:mariadb://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S09P13D201?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 #spring.datasource.username=S09P13D201
 #spring.datasource.password=sMTWKgddDr
+decorator.datasource.p6spy.enable-logging=true
+decorator.datasource.p6spy.multiline=true
