--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -27,10 +27,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create #create update none
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
-        show_sql: true
+        show_sql: false
         format_sql: true
 
 
