--- a/Backend/crit/.dockerignore
+++ b/Backend/crit/.dockerignore
@@ -1,3 +1,3 @@
 
-src/main/resources/application.yml
-src/main/resources/application.properties
+./src/main/resources/application.yml
+./src/main/resources/application.properties
