--- a/Backend/crit/build.gradle
+++ b/Backend/crit/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'io.springfox:springfox-boot-starter:3.0.0'
 	implementation 'org.jcodec:jcodec-javase:0.2.5' // 썸네일 이미지 관련 의존성
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
 }
 
 tasks.named('test') {
