--- a/Backend/crit/src/main/resources/application.properties
+++ b/Backend/crit/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S09P13D201?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
-#spring.datasource.username=S09P13D201
-#spring.datasource.password=sMTWKgddDr
-logging.level.org.hibernate.SQL = debug
-logging.level.org.hibernate.type.descriptor.sql = trace
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S09P13D201?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+spring.datasource.username=S09P13D201
+spring.datasource.password=sMTWKgddDr
