--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -13,11 +13,11 @@ spring:
     multipart:
       max-file-size: 300MB
       max-request-size: 300MB
-#  datasource:
-#    url: jdbc:h2:tcp://localhost/~/critt
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
+  datasource:
+    url: jdbc:h2:tcp://localhost/~/critt
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
   main:
     allow-circular-references: true
 
@@ -25,8 +25,8 @@ spring:
     include: db
 
   jpa:
-#    hibernate:
-#      ddl-auto: create #create update none
+    hibernate:
+      ddl-auto: create #create update none
     show-sql: true
     properties:
       hibernate:
