--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -1,90 +1,81 @@
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
   servlet:
-    context-path: /
+    context-path: ${SERVER_SERVLET_CONTEXT_PATH:/}
     encoding:
-      charset: UTF-8
-      enabled: true
-      force: true
-
+      charset: ${SERVER_SERVLET_ENCODING_CHARSET:UTF-8}
+      enabled: ${SERVER_SERVLET_ENCODING_ENABLED:true}
+      force: ${SERVER_SERVLET_ENCODING_FORCE:true}
 
 spring:
   servlet:
     multipart:
-      max-file-size: 300MB
-      max-request-size: 300MB
-#  datasource:
-#    url: jdbc:h2:tcp://localhost/~/critt
-#    username: sa
-#    password:
-#    driver-class-name: org.h2.Driver
+      max-file-size: ${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:300MB}
+      max-request-size: ${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:300MB}
+
   main:
-    allow-circular-references: true
+    allow-circular-references: ${SPRING_MAIN_ALLOW_CIRCULAR_REFERENCES:true}
 
   profiles:
-    include: db
+    include: ${SPRING_PROFILES_INCLUDE:db}
 
   jpa:
-#    hibernate:
-#      ddl-auto: create #create update none
-    show-sql: true
+    show-sql: ${SPRING_JPA_SHOW_SQL:true}
     properties:
       hibernate:
-        show_sql: true
-        format_sql: true
-
+        show_sql: ${SPRING_JPA_PROPERTIES_HIBERNATE_SHOW_SQL:true}
+        format_sql: ${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL:true}
 
   security:
     oauth2:
       client:
         registration:
-          google: # /oauth2/authorization/google ? ??? ???? ??.
-            client-id: 654898016967-ga4did0cpou4r9ckv0r7ho42arkrtlc1.apps.googleusercontent.com
-            client-secret: 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
-            redirect-uri: http://localhost:8080/login/oauth2/code/google
-            authorization-grant-type: authorization_code
-            scope: profile, email
+          google:
+            client-id: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_ID}
+            client-secret: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET}
+            redirect-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_REDIRECT_URI}
+            authorization-grant-type: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_AUTHORIZATION_GRANT_TYPE}
+            scope: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_SCOPE}
 
           naver:
-            client-id: L61z2MvnsWFQfYi7kRi2
-            client-secret: C7WDt44jj5
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
-            authorization-grant-type: authorization_code
-            scope: name, email, profile_image
-            client-name: Naver
+            client-id: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_ID}
+            client-secret: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_SECRET}
+            redirect-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_REDIRECT_URI}
+            authorization-grant-type: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_AUTHORIZATION_GRANT_TYPE}
+            scope: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_SCOPE}
+            client-name: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_NAME}
 
           kakao:
-            client-id: abc570fb116bd926266e60e2e34149bb
-            redirect-uri: http://localhost:3000/login/oauth2/code/kakao
-            client-authentication-method: POST
-            authorization-grant-type: authorization_code
-            scope: profile_nickname, profile_image, account_email
-            client-name: Kakao
+            client-id: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_ID}
+            redirect-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_REDIRECT_URI}
+            client-authentication-method: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_AUTHENTICATION_METHOD}
+            authorization-grant-type: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_AUTHORIZATION_GRANT_TYPE}
+            scope: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_SCOPE}
+            client-name: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_NAME}
 
         provider:
           google:
-            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth?prompt=consent&access_type=offline
-            token_uri: https://oauth2.googleapis.com/token
-            user-info-uri: https://www.googleapis.com/oauth2/v2/userinfo
+            authorization-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_AUTHORIZATION_URI}
+            token-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_TOKEN_URI}
+            user-info-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_USER_INFO_URI}
 
           naver:
-            authorization-uri: https://nid.naver.com/oauth2.0/authorize
-            token-uri: https://nid.naver.com/oauth2.0/token
-            user-info-uri: https://openapi.naver.com/v1/nid/me
-            user-name-attribute: response
+            authorization-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_AUTHORIZATION_URI}
+            token-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_TOKEN_URI}
+            user-info-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_USER_INFO_URI}
+            user-name-attribute: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_USER_NAME_ATTRIBUTE}
 
           kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
+            authorization-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_AUTHORIZATION_URI}
+            token-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_TOKEN_URI}
+            user-info-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_USER_INFO_URI}
+            user-name-attribute: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_USER_NAME_ATTRIBUTE}
 
 file:
-  dir: C:\Users\SSAFY\Desktop\파일저장
+  dir: ${FILE_DIR:C:\Users\SSAFY\Desktop\파일저장}
 
-OPENVIDU_URL: https://i9d201.p.ssafy.io:8443/
-OPENVIDU_SECRET: CRITCRIT
-
+OPENVIDU_URL: ${OPENVIDU_URL:https://i9d201.p.ssafy.io:8443/}
+OPENVIDU_SECRET: ${OPENVIDU_SECRET:CRITCRIT}
 
 logging:
   level:
@@ -92,27 +83,25 @@ logging:
       hibernate:
         type:
           descriptor:
-            sql: debug
+            sql: ${LOGGING_LEVEL_ORG_HIBERNATE_TYPE_DESCRIPTOR_SQL:debug}
     com:
       amazonaws:
         util:
-          EC2MetadataUtils: ERROR
+          EC2MetadataUtils: ${LOGGING_LEVEL_COM_AMAZONAWS_UTIL_EC2METADATAUTILS:ERROR}
 
 app:
   auth:
-    token-secret: critservicecritservice
+    token-secret: ${APP_AUTH_TOKEN_SECRET:critservicecritservice}
 
 cloud:
   aws:
     s3:
-      bucket: critservice
+      bucket: ${CLOUD_AWS_S3_BUCKET:critservice}
     credentials:
-      access-key: AKIA4NDE6FWZN6X2GUWP
-      secret-key: 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
+      access-key: ${CLOUD_AWS_CREDENTIALS_ACCESS_KEY}
+      secret-key: ${CLOUD_AWS_CREDENTIALS_SECRET_KEY}
     region:
-      static: ap-northeast-2
-      auto: false
+      static: ${CLOUD_AWS_REGION_STATIC:ap-northeast-2}
+      auto: ${CLOUD_AWS_REGION_AUTO:false}
     stack:
-      auto: false
-
-
+      auto: ${CLOUD_AWS_STACK_AUTO:false}
