--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -96,12 +96,12 @@ app:
 cloud:
   aws:
     s3:
-      bucket: critservice
+      bucket: ${CLOUD_AWS_S3_BUCKET:critservice}
     credentials:
-      access-key: AKIA4NDE6FWZN6X2GUWP
-      secret-key: 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
+      access-key: ${CLOUD_AWS_CREDENTIALS_ACCESS_KEY}
+      secret-key: ${CLOUD_AWS_CREDENTIALS_SECRET_KEY}
     region:
-      static: ap-northeast-2
-      auto: false
+      static: ${CLOUD_AWS_REGION_STATIC:ap-northeast-2}
+      auto: ${CLOUD_AWS_REGION_AUTO:false}
     stack:
-      auto: false
+      auto: ${CLOUD_AWS_STACK_AUTO:false}
