--- a/Backend/crit/src/main/resources/application.properties
+++ b/Backend/crit/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
-spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVERCLASSNAME}
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.datasource.hikari.maximum-pool-size=1
+#spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
+#spring.datasource.driverClassName=${SPRING_DATASOURCE_DRIVERCLASSNAME}
+#spring.datasource.url=${SPRING_DATASOURCE_URL}
+#spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+#spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+#spring.datasource.hikari.maximum-pool-size=1
