--- a/Backend/crit/Dockerfile
+++ b/Backend/crit/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:11-jdk
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
 RUN chmod +x /app.jar  # 이 부분을 추가하여 실행 권한을 부여합니다.
-ENTRYPOINT ["java","-jar","-Duser.timezone=Asia/Seoul","/app.jar","--spring.config.location=/config/application.yml"]
+ENTRYPOINT ["java","-jar","-Duser.timezone=Asia/Seoul","/app.jar"]
