--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -1,92 +1,91 @@
 server:
-  port: ${SERVER_PORT:8080}
+  port: 8080
   servlet:
-    context-path: ${SERVER_SERVLET_CONTEXT_PATH:/}
+    context-path: /
     encoding:
-      charset: ${SERVER_SERVLET_ENCODING_CHARSET:UTF-8}
-      enabled: ${SERVER_SERVLET_ENCODING_ENABLED:true}
-      force: ${SERVER_SERVLET_ENCODING_FORCE:true}
+      charset: UTF-8
+      enabled: true
+      force: true
+
 
 spring:
   servlet:
     multipart:
-      max-file-size: ${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:300MB}
-      max-request-size: ${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:300MB}
+      max-file-size: 300MB
+      max-request-size: 300MB
+  datasource:
+    url: jdbc:mariadb://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S09P13D201?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+    username: S09P13D201
+    password: sMTWKgddDr
+    driver-class-name: org.mariadb.jdbc.Driver
 
   main:
-    allow-circular-references: ${SPRING_MAIN_ALLOW_CIRCULAR_REFERENCES:true}
+    allow-circular-references: true
 
-  #profiles:
-    #include: ${SPRING_PROFILES_INCLUDE:db}
+  profiles:
+    include: db
 
   jpa:
-    show-sql: ${SPRING_JPA_SHOW_SQL:true}
+   hibernate:
+     ddl-auto: create #create update none
+    show-sql: true
     properties:
       hibernate:
-        show_sql: ${SPRING_JPA_PROPERTIES_HIBERNATE_SHOW_SQL:true}
-        format_sql: ${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL:true}
-    hibernate:
-        ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
-
-  datasource:
-      driverClassName: ${SPRING_DATASOURCE_DRIVERCLASSNAME}
-      url: ${SPRING_DATASOURCE_URL}
-      username: ${SPRING_DATASOURCE_USERNAME}
-      password: ${SPRING_DATASOURCE_PASSWORD}
-      hikari.maximum-pool-size: 1
-
+        show_sql: true
+        format_sql: true
 
 
   security:
     oauth2:
       client:
         registration:
-          google:
-            client-id: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_ID}
-            client-secret: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_CLIENT_SECRET}
-            redirect-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_REDIRECT_URI}
-            authorization-grant-type: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_AUTHORIZATION_GRANT_TYPE}
-            scope: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_SCOPE}
+          google: # /oauth2/authorization/google ? ??? ???? ??.
+            client-id: 654898016967-ga4did0cpou4r9ckv0r7ho42arkrtlc1.apps.googleusercontent.com
+            client-secret: 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
+            redirect-uri: http://localhost:8080/login/oauth2/code/google
+            authorization-grant-type: authorization_code
+            scope: profile, email
 
           naver:
-            client-id: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_ID}
-            client-secret: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_SECRET}
-            redirect-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_REDIRECT_URI}
-            authorization-grant-type: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_AUTHORIZATION_GRANT_TYPE}
-            scope: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_SCOPE}
-            client-name: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_CLIENT_NAME}
+            client-id: L61z2MvnsWFQfYi7kRi2
+            client-secret: C7WDt44jj5
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            authorization-grant-type: authorization_code
+            scope: name, email, profile_image
+            client-name: Naver
 
           kakao:
-            client-id: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_ID}
-            redirect-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_REDIRECT_URI}
-            client-authentication-method: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_AUTHENTICATION_METHOD}
-            authorization-grant-type: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_AUTHORIZATION_GRANT_TYPE}
-            scope: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_SCOPE}
-            client-name: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_CLIENT_NAME}
+            client-id: abc570fb116bd926266e60e2e34149bb
+            redirect-uri: http://localhost:3000/login/oauth2/code/kakao
+            client-authentication-method: POST
+            authorization-grant-type: authorization_code
+            scope: profile_nickname, profile_image, account_email
+            client-name: Kakao
 
         provider:
           google:
-            authorization-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_AUTHORIZATION_URI}
-            token-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_TOKEN_URI}
-            user-info-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_GOOGLE_USER_INFO_URI}
+            authorization-uri: https://accounts.google.com/o/oauth2/v2/auth?prompt=consent&access_type=offline
+            token_uri: https://oauth2.googleapis.com/token
+            user-info-uri: https://www.googleapis.com/oauth2/v2/userinfo
 
           naver:
-            authorization-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_AUTHORIZATION_URI}
-            token-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_TOKEN_URI}
-            user-info-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_USER_INFO_URI}
-            user-name-attribute: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_NAVER_USER_NAME_ATTRIBUTE}
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
 
           kakao:
-            authorization-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_AUTHORIZATION_URI}
-            token-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_TOKEN_URI}
-            user-info-uri: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_USER_INFO_URI}
-            user-name-attribute: ${SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_KAKAO_USER_NAME_ATTRIBUTE}
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
 
 file:
-  dir: ${FILE_DIR:C:\Users\SSAFY\Desktop\파일저장}
+  dir: C:\Users\SSAFY\Desktop\파일저장
 
-OPENVIDU_URL: ${OPENVIDU_URL:https://i9d201.p.ssafy.io:8443/}
-OPENVIDU_SECRET: ${OPENVIDU_SECRET:CRITCRIT}
+OPENVIDU_URL: https://i9d201.p.ssafy.io:8443/
+OPENVIDU_SECRET: CRITCRIT
+
 
 logging:
   level:
@@ -94,27 +93,27 @@ logging:
       hibernate:
         type:
           descriptor:
-            sql: ${LOGGING_LEVEL_ORG_HIBERNATE_TYPE_DESCRIPTOR_SQL:debug}
+            sql: debug
     com:
       amazonaws:
         util:
-          EC2MetadataUtils: ${LOGGING_LEVEL_COM_AMAZONAWS_UTIL_EC2METADATAUTILS:ERROR}
+          EC2MetadataUtils: ERROR
 
 app:
   auth:
-    token-secret: ${APP_AUTH_TOKEN_SECRET:critservicecritservice}
+    token-secret: critservicecritservice
 
 cloud:
   aws:
     s3:
-      bucket: ${CLOUD_AWS_S3_BUCKET:critservice}
+      bucket: critservice
     credentials:
-      access-key: ${CLOUD_AWS_CREDENTIALS_ACCESS_KEY}
-      secret-key: ${CLOUD_AWS_CREDENTIALS_SECRET_KEY}
+      access-key: AKIA4NDE6FWZN6X2GUWP
+      secret-key: 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
     region:
-      static: ${CLOUD_AWS_REGION_STATIC:ap-northeast-2}
-      auto: ${CLOUD_AWS_REGION_AUTO:false}
+      static: ap-northeast-2
+      auto: false
     stack:
-      auto: ${CLOUD_AWS_STACK_AUTO:false}
+      auto: false
 
 
