--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -17,13 +17,20 @@ spring:
     multipart:
       max-file-size: 300MB
       max-request-size: 300MB
+
+
   datasource:
-    url: jdbc:mariadb://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S09P13D201?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
-    username: S09P13D201
-    password: sMTWKgddDr
-    hikari:
-      maximum-pool-size: 3
-    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:h2:tcp://localhost/~/critt
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+#  datasource:
+#    url: jdbc:mariadb://stg-yswa-kr-practice-db-master.mariadb.database.azure.com:3306/S09P13D201?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+#    username: S09P13D201
+#    password: sMTWKgddDr
+#    hikari:
+#      maximum-pool-size: 3
+#    driver-class-name: org.mariadb.jdbc.Driver
 
   main:
     allow-circular-references: true
@@ -33,7 +40,7 @@ spring:
 
   jpa:
    hibernate:
-     ddl-auto: update #create update none
+     ddl-auto: create #create update none
 
 
   security:
