--- a/[FE]프론트/my-app/package.json
+++ b/[FE]프론트/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "history": "^5.3.0",
@@ -18,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-player": "^2.12.0",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
