--- a/[FE]프론트/my-app/package.json
+++ b/[FE]프론트/my-app/package.json
@@ -28,7 +28,7 @@
     "redux-persist": "^6.0.0",
     "styled-components": "^6.0.4",
     "sweetalert2": "^11.7.20",
-    "swiper": "^10.0.4",
+    "swiper": "^10.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -57,5 +57,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.8.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "style-loader": "^3.3.3"
   }
 }
