--- a/Backend/crit/build.gradle
+++ b/Backend/crit/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.28.0' // openvidu를 위한 의존성
 	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.2' // 시간을 파싱하기 위한 방법
 
-	implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1' // MariaDB 연결을 위한 의존성
+//	implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1' // MariaDB 연결을 위한 의존성
 
 	implementation group: 'p6spy', name: 'p6spy', version: '3.9.1' // sql 보려고 의존성 
 
