--- a/[FE]프론트/my-app/package.json
+++ b/[FE]프론트/my-app/package.json
@@ -18,6 +18,8 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-modal": "^3.16.1",
     "react-player": "^2.12.0",
     "react-redux": "^8.1.1",
