Fix : SQL 로그 끄기

--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -33,11 +33,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update #create update none
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
 #        show_sql: true
-        format_sql: true
+        format_sql: false
 
 
   security:
