--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -96,9 +96,9 @@ logging:
   level:
     org:
       hibernate:
-        type:
-          descriptor:
-            sql: debug
+        # type:
+        #   descriptor:
+        #     sql: debug
     com:
       amazonaws:
         util:
