--- a/Backend/crit/build.gradle
+++ b/Backend/crit/build.gradle
@@ -44,14 +44,14 @@ dependencies {
 	implementation group: 'io.openvidu', name: 'openvidu-java-client', version: '2.28.0' // openvidu를 위한 의존성
 	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.14.2' // 시간을 파싱하기 위한 방법
 
-//	implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1' // MariaDB 연결을 위한 의존성
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.4.1' // MariaDB 연결을 위한 의존성
 
 	implementation group: 'p6spy', name: 'p6spy', version: '3.9.1' // sql 보려고 의존성
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // AwsS3 관련 의존성
 
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'com.h2database:h2'
 	// runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
