로직에 대한 주석 작성

--- a/Backend/crit/build.gradle
+++ b/Backend/crit/build.gradle
@@ -68,6 +68,8 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+
+	//파일 컨버터를 위한 의존성
 	implementation 'commons-fileupload:commons-fileupload:1.3'
 
 
