--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -33,11 +33,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update #create update none
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
-        #        show_sql: true
-        format_sql: false
+#        show_sql: true
+        format_sql: true
 
 
   security:
@@ -96,9 +96,9 @@ logging:
   level:
     org:
       hibernate:
-      # type:
-      #   descriptor:
-      #     sql: debug
+        type:
+          descriptor:
+            sql: debug
     com:
       amazonaws:
         util:
