--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -32,7 +32,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update #create update none
+      ddl-auto: create #create update none
     show-sql: true
     properties:
       hibernate:
@@ -121,4 +121,4 @@ cloud:
     stack:
       auto: false
     cloudfront:
-      url: d3byqpylj7jy1e.cloudfront.net/
+      url: d3byqpylj7jy1e.cloudfront.net
