--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
     password: ENC(UoG6QmblfdyyheAZHohflGtuOTo7S+6s)
     driver-class-name: org.mariadb.jdbc.Driver
     hikari:
-      maximum-pool-size:1
+      maximum-pool-size:3
   main:
     allow-circular-references: true
 
@@ -33,11 +33,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update #create update none
-    show-sql: false
+    show-sql: true
     properties:
       hibernate:
 #        show_sql: true
-        format_sql: false
+        format_sql: true
 
 
   security:
@@ -96,9 +96,9 @@ logging:
   level:
     org:
       hibernate:
-        # type:
-        #   descriptor:
-        #     sql: debug
+        type:
+          descriptor:
+            sql: debug
     com:
       amazonaws:
         util:
