--- a/Backend/crit/build.gradle
+++ b/Backend/crit/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE' // AwsS3 관련 의존성
 
+	implementation 'org.springframework.boot:spring-boot-starter-validation' // 유효성 체크 관련 의존성
+
 	compileOnly 'org.projectlombok:lombok'
 //	runtimeOnly 'com.h2database:h2'
 	// runtimeOnly 'com.mysql:mysql-connector-j'
