--- a/[FE]프론트/my-app/package.json
+++ b/[FE]프론트/my-app/package.json
@@ -33,9 +33,11 @@
     "react-router": "^6.14.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.4",
     "sweetalert2": "^11.7.20",
     "swiper": "^10.1.0",
