--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create #create update none
+      ddl-auto: update #create update none
     show-sql: true
     properties:
       hibernate:
