--- a/Backend/crit/src/main/resources/application.yml
+++ b/Backend/crit/src/main/resources/application.yml
@@ -28,11 +28,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update #create update none
-    show-sql: true
+    # show-sql: true
     properties:
       hibernate:
 #        show_sql: true
-        format_sql: true
+        # format_sql: true
 
 
   security:
@@ -90,10 +90,10 @@ OPENVIDU_SECRET: ENC(SpevGKCVgqoWfWW24YPSm5x18/N27Hdp)
 logging:
   level:
     org:
-      hibernate:
-        type:
-          descriptor:
-            sql: debug
+      # hibernate:
+      #   type:
+      #     descriptor:
+      #       sql: debug
     com:
       amazonaws:
         util:
